增加Windows x86版本安装包

--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -6,8 +6,9 @@
 	<title>Venti1112 的 RustDesk 服务器</title>
 </head>
 <body>
-	<h1>欢迎来到 Venti1112 的 RustDesk 服务器</h1>
+	<h1>Venti1112 的 RustDesk 服务器</h1>
     <a href="https://venti.qzz.io/rustdesk/rustdesk windows_x64.exe">RustDesk 客户端下载（Windows x64）</a>
+    <a href="https://venti.qzz.io/rustdesk/rustdesk windows_x86.exe">RustDesk 客户端下载（Windows x86）</a>
 	<a href="https://venti.qzz.io/rustdesk/rustdesk android_arm64.apk">RustDesk 客户端下载（Android ARM64）</a>
     <a href="https://venti.qzz.io/rustdesk/rustdesk android_armv7.apk">RustDesk 客户端下载（Android ARMv7）</a>
     <p>服务器连接配置代码：9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</p>
