新增下载链接样式，优化GitHub链接展示

--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -30,6 +30,12 @@
                 <a href="rustdesk android_armv7.apk">Android ARMv7</a>
             </div>
         </div>
+        <div class="github-link">
+            <p>RustDesk 开源项目: 
+                <a href="https://github.com/rustdesk/rustdesk/" target="_blank">GitHub 仓库</a> | 
+                <a href="https://rustdesk.com/zh-cn/" target="_blank">官方网站</a>
+            </p>
+        </div>
     </div>
     <script src="../assets/js/main.js"></script>
 </body>
