添加了图标

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>venti1112 的小站</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/jpg" href="/favicon.jpg">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <nav>
+        <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar">
+        <span class="nav-username">venti1112</span>
         <a href="/">首页</a>
-        <a href="rustdesk/">RustDesk</a>
+        <a href="/rustdesk/">RustDesk</a>
     </nav>
     <div class="container">
         <h1>欢迎来到 venti1112 的小站</h1>
@@ -17,7 +20,7 @@
         <p>我的邮箱：venti111112@qq.com</p>
         <p>提供以下服务：</p>
         <ul>        
-            <li><a href="rustdesk/">RustDesk 远程桌面服务器</a></li>
+            <li><a href="/rustdesk/">RustDesk 远程桌面服务器</a></li>
         </ul>
     </div>
 </body>
