--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Venti1112 的 RustDesk 服务器</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="icon" type="image/jpg" href="/favicon.jpg">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <nav>
-        <a href="../">首页</a>
-        <a href="../rustdesk/">RustDesk</a>
+        <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar">
+        <span class="nav-username">venti1112</span>
+        <a href="/">首页</a>
+        <a href="/rustdesk/">RustDesk</a>
     </nav>
     <div class="container">
         <h1>Venti1112 的 RustDesk 服务器</h1>
@@ -37,6 +40,6 @@
             </p>
         </div>
     </div>
-    <script src="../assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
