优化导航头像样式，增加边框和圆角效果

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar">
+        <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar" style="width: 40px; height: 40px; border-radius: 50%; border: 2px solid white; margin-right: 1rem;">
         <span class="nav-username">venti1112</span>
         <a href="/">首页</a>
         <a href="/rustdesk/">RustDesk</a>
