--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Venti1112 的 RustDesk 服务器</title>
-    <link rel="icon" type="image/jpg" href="/favicon.jpg">
+    <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <nav>
-        <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-        <span class="nav-username">venti1112</span>
-        <a href="/">首页</a>
-        <a href="/rustdesk/">RustDesk</a>
+        <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar" style="width: 40px; height: 40px; border-radius: 50%; border: 2px solid white; margin-right: 1rem;">
+        <span class="nav-username" style="font-size: 1.1rem; line-height: 1.5; margin-right: 1.5rem;">venti1112</span>
+        <a href="/" style="font-size: 1.1rem; line-height: 1.5;">首页</a>
+        <a href="/rustdesk/" style="font-size: 1.1rem; line-height: 1.5;">RustDesk</a>
     </nav>
     <div class="container">
         <h1>Venti1112 的 RustDesk 服务器</h1>
