--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
-        <h1>欢迎来到 venti1112 的小站</h1>
-        <p>这是我的个人网站，欢迎访问！</p>
-        <p>我的邮箱：venti111112@qq.com</p>
+        <h1>欢迎来到venti1112的小站</h1>
+        <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，热爱计算机（但是是个大笨蛋！）</p>
+        <p>邮箱：3788365896@qq.com</p>
         <p>提供以下服务：</p>
         <ul>        
             <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
