--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </nav>
     <div class="container">
         <h1>欢迎来到venti1112的小站</h1>
-        <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，热爱计算机（但是是个大笨蛋！）</p>
+        <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
         <p>邮箱：3788365896@qq.com</p>
+        <p>QQ：3788365896</p>
         <p>提供以下服务：</p>
         <ul>        
             <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
