规范文件命名，添加活动选项卡

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
         <a href="/">首页</a>
-        <a href="/about.html">关于我</a>
+        <a href="/about.html" class="nav-active">关于我</a>
         <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
@@ -22,6 +22,6 @@
         <p>QQ：3788365896</p>
         <p>GitHub：https://github.com/venti1112</p>
     </div>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/loader_screen.js"></script>
 </body>
 </html>
