--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-        <a href="/">首页</a>
+        <a href="/" class="nav-active">首页</a>
         <a href="/about.html">关于我</a>
         <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
@@ -24,6 +24,6 @@
             <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
         </ul>
     </div>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/loader_screen.js"></script>
 </body>
 </html>
