--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -12,7 +12,7 @@
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
         <a href="/">首页</a>
         <a href="/about.html">关于我</a>
-        <a href="/rustdesk/">RustDesk服务器</a>
+        <a href="/rustdesk/" class="nav-active">RustDesk服务器</a>
     </nav>
     <div class="container">
         <h1>Venti1112的RustDesk服务器</h1>
@@ -27,10 +27,10 @@
         <div class="download-box">
             <h3>客户端下载</h3>
             <div class="download-links">
-                <a href="rustdesk windows_x64.exe">Windows x64</a>
-                <a href="rustdesk windows_x86.exe">Windows x86</a>
-                <a href="rustdesk android_arm64.apk">Android ARM64</a>
-                <a href="rustdesk android_armv7.apk">Android ARMv7</a>
+                <a href="rustdesk_windows_x64.exe">Windows x64</a>
+                <a href="rustdesk_windows_x86.exe">Windows x86</a>
+                <a href="rustdesk_android_arm64.apk">Android ARM64</a>
+                <a href="rustdesk_android_armv7.apk">Android ARMv7</a>
             </div>
         </div>
         <div class="github-link">
@@ -41,6 +41,7 @@
             </p>
         </div>
     </div>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/loader_screen.js"></script>
+    <script src="/assets/js/copy.js"></script>
 </body>
 </html>
