优化背景图像加载逻辑，确保背景样式优先应用，并为下载链接添加无加载效果类

--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -27,10 +27,10 @@
         <div class="download-box">
             <h3>客户端下载</h3>
             <div class="download-links">
-                <a href="rustdesk_windows_x64.exe">Windows x64</a>
-                <a href="rustdesk_windows_x86.exe">Windows x86</a>
-                <a href="rustdesk_android_arm64.apk">Android ARM64</a>
-                <a href="rustdesk_android_armv7.apk">Android ARMv7</a>
+                <a href="rustdesk_windows_x64.exe" class="no-loading">Windows x64</a>
+                <a href="rustdesk_windows_x86.exe" class="no-loading">Windows x86</a>
+                <a href="rustdesk_android_arm64.apk" class="no-loading">Android ARM64</a>
+                <a href="rustdesk_android_armv7.apk" class="no-loading">Android ARMv7</a>
             </div>
         </div>
         <div class="github-link">
