添加加载动画初始化和事件处理脚本，优化页面加载体验

--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -6,6 +6,7 @@
     <title>Venti1112的RustDesk服务器</title>
     <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <script src="/assets/js/loader_init.js"></script>
 </head>
 <body>
     <nav>
@@ -41,7 +42,7 @@
             </p>
         </div>
     </div>
-    <script src="/assets/js/loader_screen.js"></script>
+    <script src="/assets/js/loader_events.js"></script>
     <script src="/assets/js/copy.js"></script>
 </body>
 </html>
