--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>venti1112的小站</title>
     <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <script src="/assets/js/loader_init.js"></script>
 </head>
 <body>
     <nav>
@@ -22,6 +23,6 @@
         <p>QQ：3788365896</p>
         <p>GitHub：https://github.com/venti1112</p>
     </div>
-    <script src="/assets/js/loader_screen.js"></script>
+    <script src="/assets/js/loader_events.js"></script>
 </body>
 </html>
