--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>venti1112的小站</title>
     <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <script src="/assets/js/loader_init.js"></script>
 </head>
 <body>
     <nav>
@@ -24,6 +25,6 @@
             <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
         </ul>
     </div>
-    <script src="/assets/js/loader_screen.js"></script>
+    <script src="/assets/js/loader_events.js"></script>
 </body>
 </html>
