优化导航栏样式，添加导航容器；修复页面切换动画逻辑，增强用户体验

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 </head>
 <body>
     <nav>
-        <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-        <a href="#home" class="nav-link nav-active" data-page="home">首页</a>
-        <a href="#about" class="nav-link" data-page="about">关于我</a>
-        <a href="#rustdesk" class="nav-link" data-page="rustdesk">RustDesk服务器</a>
+        <div class="nav-container">
+            <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
+            <a href="#home" class="nav-link nav-active" data-page="home">首页</a>
+            <a href="#about" class="nav-link" data-page="about">关于我</a>
+            <a href="#rustdesk" class="nav-link" data-page="rustdesk">RustDesk服务器</a>
+        </div>
     </nav>
     <div class="container page-content active" id="home">
         <h1>欢迎来到venti1112的小站</h1>
         <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
-        <p>邮箱：3788365896@qq.com</p>
-        <p>QQ：3788365896</p>
-        <p>提供以下服务：</p>
+        <li><a href="#about">关于我</a></li>
+        <p>目前提供以下服务：</p>
         <ul>        
             <li><a href="#rustdesk">RustDesk远程桌面服务器</a></li>
         </ul>
@@ -39,6 +40,7 @@
         <p>邮箱：3788365896@qq.com</p>
         <p>QQ：3788365896</p>
         <p>GitHub：https://github.com/venti1112</p>
+        <p>Steam：https://steamcommunity.com/profiles/76561199731450262/</p>
     </div>
     <div class="container page-content" id="rustdesk">
         <h1>Venti1112的RustDesk服务器</h1>
