优化导航栏下划线效果，调整样式和动画逻辑；修正HTML语言属性为zh-CN

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,6 +22,7 @@
             <a href="#home" class="nav-link nav-active" data-page="home">首页</a>
             <a href="#about" class="nav-link" data-page="about">关于我</a>
             <a href="#rustdesk" class="nav-link" data-page="rustdesk">RustDesk服务器</a>
+            <div class="nav-underline"></div>
         </div>
     </nav>
     <div class="container page-content active" id="home">
