--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <nav>
         <div class="nav-container">
             <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-            <a href="#home" class="nav-link nav-active" data-page="home">首页</a>
+            <a href="#home" class="nav-link" data-page="home">首页</a>
             <a href="#about" class="nav-link" data-page="about">关于我</a>
             <a href="#rustdesk" class="nav-link" data-page="rustdesk">RustDesk服务器</a>
             <div class="nav-underline"></div>
         </div>
     </nav>
-    <div class="container page-content active" id="home">
+    <div class="container page-content" id="home">
         <h1>欢迎来到venti1112的小站</h1>
         <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
         <li><a href="#about">关于我</a></li>
@@ -49,7 +49,7 @@
             <div class="config-code">
                 <p>服务器连接配置代码：</p>
                 <div class="code-box" id="serverCode">9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</div>
-                <button class="copy-btn" onclick="copyServerCode(event)">复制代码</button>
+                <button class="copy-btn">复制代码</button>
             </div>
             <p>请将上述连接配置代码导入您的RustDesk客户端以连接到此服务器。</p>
         </div>
