--- a/index.html
+++ b/index.html
@@ -13,9 +13,46 @@
         .page-content.active {
             display: block;
         }
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.3s;
+        }
+        .loader {
+            border: 10px solid #4cd8b8;
+            border-top: 10px solid #156c54;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .loading-text {
+            margin-top: 20px;
+            color: #4cd8b8;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-size: 30px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
+    <div id="loading-screen">
+    <div class="loader"></div>
+    <p class="loading-text">加载中...</p>
+  </div>
     <nav>
         <div class="nav-container">
             <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
@@ -72,5 +109,14 @@
     </div>
     <script src="/assets/js/page-switch.js"></script>
     <script src="/assets/js/copy.js"></script>
+    <script>
+    window.addEventListener('load', function() {
+      const loadingScreen = document.getElementById('loading-screen');
+      loadingScreen.style.opacity = '0';
+      setTimeout(() => {
+        loadingScreen.style.display = 'none';
+      }, 300);
+    });
+  </script>
 </body>
 </html>
