改进复制功能以支持多个目标元素

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="config-code">
                 <p>服务器连接配置代码：</p>
                 <div class="code-box" id="serverCode">9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</div>
-                <button class="copy-btn">复制代码</button>
+                <button class="copy-btn" data-target="serverCode">复制代码</button>
             </div>
             <p>请将上述连接配置代码导入您的RustDesk客户端以连接到此服务器。</p>
         </div>
