--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/page-switch.js" defer></script>
     <script src="/assets/js/copy.js" defer></script>
+    <script src="/assets/js/theme.js" defer></script>
+    <link rel="preload" href="/page/home.html" as="document">
+    <link rel="preload" href="/page/about.html" as="document">
+    <link rel="preload" href="/page/rustdesk.html" as="document">
     <style>
         #loading-screen {
             position: fixed;
@@ -58,6 +62,19 @@
                 <a href="#home" class="nav-link" data-page="home">首页</a>
                 <a href="#about" class="nav-link" data-page="about">关于我</a>
                 <a href="#rustdesk" class="nav-link" data-page="rustdesk">RustDesk服务器</a>
+                <button id="theme-toggle" class="theme-toggle" aria-label="切换深色模式">
+                    <span class="icon sun">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="12" cy="12" r="4" stroke="#4cd8b8" stroke-width="2" fill="none"/>
+                            <path d="M12 1V3M12 21V23M4.22 4.22L5.64 5.64M18.36 18.36L19.78 19.78M1 12H3M21 12H23M4.22 19.78L5.64 18.36M18.36 5.64L19.78 4.22" stroke="#4cd8b8" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                    </span>
+                    <span class="icon moon">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 12.79C20.8427 14.4922 20.2039 16.1144 19.1583 17.4668C18.1127 18.8192 16.7035 19.8458 15.0957 20.4265C13.4879 21.0073 11.748 21.1181 10.0795 20.7461C8.41104 20.3741 6.88296 19.5345 5.67422 18.3258C4.46548 17.117 3.62593 15.589 3.2539 13.9205C2.88187 12.252 2.99271 10.5121 3.57345 8.9043C4.15419 7.29651 5.18082 5.88729 6.53321 4.8417C7.8856 3.79611 9.5078 3.15732 11.21 3C10.2134 4.34827 9.73385 6.00945 9.85854 7.68141C9.98323 9.35338 10.7039 10.9251 11.8894 12.1106C13.0749 13.2961 14.6466 14.0168 16.3186 14.1415C17.9906 14.2662 19.6517 13.7866 21 12.79Z" stroke="#4cd8b8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </span>
+                </button>
                 <div class="nav-underline"></div>
             </div>
         </nav>
