深色模式回归，优化动画

--- a/index.html
+++ b/index.html
@@ -83,7 +83,15 @@
                     <li class="nav-item"><a class="nav-link" href="#about" data-page="about">关于</a></li>
                 </ul>
                 <div class="nav-underline"></div>
-                <!-- 右侧功能区：已移除主题切换按钮 -->
+                <!-- 右侧功能区：主题切换按钮 -->
+                <form class="d-flex">
+                    <!-- 深色模式切换按钮 -->
+                    <button class="btn btn-outline-secondary theme-toggle-btn" id="themeToggle" type="button"
+                        data-bs-theme-value="dark"
+                        aria-label="切换深色模式">
+                        🌙
+                    </button>
+                </form>
             </div>
         </div>
     </nav>
